# libserialport

./: .gitignore  CMakeLists.txt  cmake_config_gen.py  config.h.cmake  libserialport-config.cmake.in  libserialport.h  libserialport_internal.h
cmake/: CMakeUninstall.cmake  CheckMacro.cmake
